--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,12 @@
             <version>RELEASE</version>
             <scope>compile</scope>
         </dependency>
+
+        <dependency>
+            <groupId>io.projectreactor.kafka</groupId>
+            <artifactId>reactor-kafka</artifactId>
+            <version>1.3.17</version>
+        </dependency>
     </dependencies>
 
     <build>
